# esc50-mel-cnn-sound-classification

./: .gitignore  LICENSE  README.md  download_data.sh  pyproject.toml
esc50_mel_cnn/: __init__.py  audio_tools.py  data_transforms.py  dataset.py  download_data.py  train.py
esc50_mel_cnn/data/: __init__.py  data_modules.py  datasets.py
esc50_mel_cnn/models/: __init__.py  lightning_modules.py  torch_models.py
