[tool.poetry]
name = "esc50-mel-cnn"
version = "0.1.0"
description = "Solving ESC-50 (Environmental Sound Classification) using a CNN on mel-spectrograms"
authors = ["Alexander Sribnyak <alexandersribnyak@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/sribnyak/esc50-mel-cnn-sound-classification"
keywords = ["sound classification", "convolutional neural network"]


[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.6"
torch = "^2.7.1"
tqdm = "^4.67.1"
pandas = "^2.3.0"
librosa = "^0.11.0"
torchaudio = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
