[project]
name = "esc50-mel-cnn"
version = "0.1.0"
description = "Solving ESC-50 (Environmental Sound Classification) using a CNN on mel-spectrograms"
authors = [
    {name = "Alexander Sribnyak",email = "alexandersribnyak@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["sound classification", "convolutional neural network"]
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.6,<3.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "librosa (>=0.11.0,<0.12.0)",
    "torchaudio (>=2.7.1,<3.0.0)",
    "lightning (>=2.5.1.post0,<3.0.0)"
]


[project.urls]
repository = "https://github.com/sribnyak/esc50-mel-cnn-sound-classification"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pandas-stubs = "^2.2.3.250527"

